# Pasjans

./: .gitignore  CMakeLists.txt  gra.cpp  gra.h  karta.cpp  karta.h  komenda.cpp  komenda.h  main.cpp  notes.txt  readme.md  wyswietlacz.cpp  wyswietlacz.h
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_pl.md  config.yml  feature_request_en.md  feature_request_pl.md
.github/workflows/: cmake-multi-platform.yml
System Volume Information/: IndexerVolumeGuid
include/Pasjans/: card.h  command.h  consts.h  game.h  gameView.h
src/: card.cpp  command.cpp  command.h  game.cpp  game.h  gameView.cpp  main.cpp
tests/: CMakeLists.txt  card_test.cpp  command_test.cpp  game_test.cpp
